<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_book"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_marked_word"
        android:icon="@drawable/ic_action_marked_word"
        android:title="@string/title_marked_word"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_action_statistic"
        android:title="@string/title_statistic"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_action_setting"
        android:title="@string/title_setting"
        app:showAsAction="ifRoom"/>
</menu>
