<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_quesiton"
        android:layout_below="@id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/amber_500"
        tools:text="@string/app_name"
        android:gravity="center"
        android:textSize="24sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/edt_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:drawable/editbox_background"
        android:textColor="@color/amber_500"
        android:gravity="center"
        android:maxLines="1"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:hint="@string/answer_hint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textColor="@android:color/white"
        android:background="@drawable/shape"
        android:layout_margin="16dp"/>

</LinearLayout>